--- a/wuyang.html
+++ b/wuyang.html
@@ -1,55 +1,108 @@
-<head>
-    <meta charset="utf-8">
-    
-    <title>Professional CV Website Template | WIX</title>
-    <meta name="description" content="Stand out for all the right reasons with this newly designed professional CV template. This clean and sharp template was created with you in mind, as it offers a bold way to show off your skills. With eye-catching transitions, a section fully devoted for your education and career history, and the perfect place for you to add a unique photo of yourself, your CV will be looking the best it has ever been. It's easy to get started, simply click 'Edit" below."="">
-    <meta name="author" content="Wixpress">
-    <meta http-equiv="content-language" content="en">
-    <meta http-equiv="content-type" content="text/html; charset=UTF-8">
+<html>
+    <head>
+        <meta charset="utf-8">
+        <title>Wu Yang</title>
+    </head>
+    <body>
+        <div style="left: 83px; width: 304px; position: absolute; top: 83px;" class="txtNew" id="comp-isylxd3r" data-reactid=".0.$SITE_ROOT.$desktop_siteRoot.$PAGES_CONTAINER.$centeredContent.$inlineContent.$SITE_PAGES.$c1dmp_DESKTOP.$inlineContent.$comp-irls0xdi.$inlineContent.$mediairm34ucq7/=1$mediairm34ucq7.$inlineContent.$comp-isylwyqk.$inlineContent.$comp-isylxd3r">
+            <h4 class="font_4">
+                <span class="color_19">Wu Yang
+                </span>
+            </h4>
 
-    <meta property="og:title" content="Professional CV Website Template | WIX">
-    <meta property="og:type" content="website">
-    <meta property="og:url" content="http://www.wix.com/website-template/view/html/1893">
-    <meta property="og:image" content="//static.wixstatic.com/media/643a2480bf1449d4a829cd2bb90dcd5f.jpg">
-    <meta content="Wix" property="og:site_name">
-    <meta property="og:description" content="Stand out for all the right reasons with this newly designed professional CV template. This clean and sharp template was created with you in mind, as it offers a bold way to show off your skills. With eye-catching transitions, a section fully devoted for your education and career history, and the perfect place for you to add a unique photo of yourself, your CV will be looking the best it has ever been. It's easy to get started, simply click 'Edit" below."="">
-    <meta property="fb:admins" content="731184828">
-    <meta name="fb:app_id" content="236335823061286">
-    <meta name="google-site-verification" content="QXhlrY-V2PWOmnGUb8no0L-fKzG48uJ5ozW0ukU7Rpo">
+            <h6 class="font_6" style="line-height:1.8em;">
+                <span class="color_19">
+                    <span style="letter-spacing:0.05em;">Peking University
+                    </span>
+                </span>
+            </h6>
 
-        <link rel="canonical" href="http://www.wix.com/website-template/view/html/1893">
+            <p class="font_8">&nbsp;</p>
 
-            <link rel="alternate" hreflang="fr" href="http://fr.wix.com/website-template/view/html/1893">
-            <link rel="alternate" hreflang="pt" href="http://pt.wix.com/website-template/view/html/1893">
-            <link rel="alternate" hreflang="cs" href="http://cs.wix.com/website-template/view/html/1893">
-            <link rel="alternate" hreflang="it" href="http://it.wix.com/website-template/view/html/1893">
-            <link rel="alternate" hreflang="nl" href="http://nl.wix.com/website-template/view/html/1893">
-            <link rel="alternate" hreflang="ko" href="http://ko.wix.com/website-template/view/html/1893">
-            <link rel="alternate" hreflang="de" href="http://de.wix.com/website-template/view/html/1893">
-            <link rel="alternate" hreflang="ru" href="http://ru.wix.com/website-template/view/html/1893">
-            <link rel="alternate" hreflang="sv" href="http://sv.wix.com/website-template/view/html/1893">
-            <link rel="alternate" hreflang="tr" href="http://tr.wix.com/website-template/view/html/1893">
-            <link rel="alternate" hreflang="da" href="http://da.wix.com/website-template/view/html/1893">
-            <link rel="alternate" hreflang="en" href="http://www.wix.com/website-template/view/html/1893">
-            <link rel="alternate" hreflang="es" href="http://es.wix.com/website-template/view/html/1893">
-            <link rel="alternate" hreflang="hi" href="http://hi.wix.com/website-template/view/html/1893">
-            <link rel="alternate" hreflang="ja" href="http://ja.wix.com/website-template/view/html/1893">
-            <link rel="alternate" hreflang="no" href="http://no.wix.com/website-template/view/html/1893">
-            <link rel="alternate" hreflang="pl" href="http://pl.wix.com/website-template/view/html/1893">
-        <link rel="alternate" hreflang="x-default" href="http://www.wix.com/website-template/view/html/1893">
+            <h6 class="font_6" style="line-height:1.3em;">
+                <span class="color_19">
+                    <span style="letter-spacing:0.05em;">Phone:
+                    </span>
+                </span>
+            </h6>
 
+            <p class="font_8" style="line-height:1.3em;">
+                <span class="color_19">
+                    <span style="letter-spacing:0.05em;">(+86)13728603359
+                    </span>
+                </span>
+            </p>
 
-    <!--CSS-->
-    <link rel="stylesheet" type="text/css" href="//static.parastorage.com/services/wix-html-template-viewer/1.984.0/css/reset.css">
-    <link rel="stylesheet" type="text/css" href="//static.parastorage.com/services/wix-html-template-viewer/1.984.0/new-create/css/fonts.css">
-    <link rel="stylesheet" type="text/css" href="//static.parastorage.com/services/wix-public/1.231.0/css/Helvetica/fontFace.css">
-    <link rel="stylesheet" type="text/css" href="//static.parastorage.com/services/wix-html-template-viewer/1.984.0/css/template_viewer.css">
+            <p class="font_8" style="line-height:1.3em;">&nbsp;</p>
 
+            <h6 class="font_6" style="line-height:1.3em;">
+                <span class="color_19">
+                    <span style="letter-spacing:0.05em;">Email:
+                    </span>
+                </span>
+            </h6>
 
-    <!--[if lte IE 9]>
-    <link rel="stylesheet" type="text/css" href="//static.parastorage.com/services/wix-html-template-viewer/1.984.0/css/ie9-and-down.css"/>
-    <![endif]-->
+            <p class="font_8" style="line-height:1.3em;">
+                <span class="color_19">
+                    <span style="letter-spacing:0.05em;">
+                        <object height="0">
+                            <a class="auto-generated-link" data-auto-recognition="true" data-content="yangwu@pku.edu.cn" href="yangwu@pku.edu.cn" data-type="yangwu@pku.edu.cn
+                            </a>
+                        </object>&nbsp;
+                    </span>
+                </span>
+            </p>
 
-    <link class="__ADORIC__" rel="stylesheet" type="text/css" href="https://adoric.com/lightboxreset.css?v=3.5.2" media="all"><link class="__ADORIC__" rel="stylesheet" type="text/css" href="https://adoric.com/public/css/animate.min.css" media="all"><link rel="stylesheet" type="text/css" href="//fast.fonts.net/cssapi/c7da2921-a5c2-426d-9611-16e0a1bdfd02.css" media="all"><style type="text/css">.fb_hidden{position:absolute;top:-10000px;z-index:10001}.fb_reposition{overflow:hidden;position:relative}.fb_invisible{display:none}.fb_reset{background:none;border:0;border-spacing:0;color:#000;cursor:auto;direction:ltr;font-family:"lucida grande", tahoma, verdana, arial, sans-serif;font-size:11px;font-style:normal;font-variant:normal;font-weight:normal;letter-spacing:normal;line-height:1;margin:0;overflow:visible;padding:0;text-align:left;text-decoration:none;text-indent:0;text-shadow:none;text-transform:none;visibility:visible;white-space:normal;word-spacing:normal}.fb_reset>div{overflow:hidden}.fb_link img{border:none}@keyframes fb_transform{from{opacity:0;transform:scale(.95)}to{opacity:1;transform:scale(1)}}.fb_animate{animation:fb_transform .3s forwards}
-.fb_dialog{background:rgba(82, 82, 82, .7);position:absolute;top:-10000px;z-index:10001}.fb_reset .fb_dialog_legacy{overflow:visible}.fb_dialog_advanced{padding:10px;-moz-border-radius:8px;-webkit-border-radius:8px;border-radius:8px}.fb_dialog_content{background:#fff;color:#333}.fb_dialog_close_icon{background:url(https://static.xx.fbcdn.net/rsrc.php/v3/yq/r/IE9JII6Z1Ys.png) no-repeat scroll 0 0 transparent;cursor:pointer;display:block;height:15px;position:absolute;right:18px;top:17px;width:15px}.fb_dialog_mobile .fb_dialog_close_icon{top:5px;left:5px;right:auto}.fb_dialog_padding{background-color:transparent;position:absolute;width:1px;z-index:-1}.fb_dialog_close_icon:hover{background:url(https://static.xx.fbcdn.net/rsrc.php/v3/yq/r/IE9JII6Z1Ys.png) no-repeat scroll 0 -15px transparent}.fb_dialog_close_icon:active{background:url(https://static.xx.fbcdn.net/rsrc.php/v3/yq/r/IE9JII6Z1Ys.png) no-repeat scroll 0 -30px transparent}.fb_dialog_loader{background-color:#f6f7f9;border:1px solid #606060;font-size:24px;padding:20px}.fb_dialog_top_left,.fb_dialog_top_right,.fb_dialog_bottom_left,.fb_dialog_bottom_right{height:10px;width:10px;overflow:hidden;position:absolute}.fb_dialog_top_left{background:url(https://static.xx.fbcdn.net/rsrc.php/v3/ye/r/8YeTNIlTZjm.png) no-repeat 0 0;left:-10px;top:-10px}.fb_dialog_top_right{background:url(https://static.xx.fbcdn.net/rsrc.php/v3/ye/r/8YeTNIlTZjm.png) no-repeat 0 -10px;right:-10px;top:-10px}.fb_dialog_bottom_left{background:url(https://static.xx.fbcdn.net/rsrc.php/v3/ye/r/8YeTNIlTZjm.png) no-repeat 0 -20px;bottom:-10px;left:-10px}.fb_dialog_bottom_right{background:url(https://static.xx.fbcdn.net/rsrc.php/v3/ye/r/8YeTNIlTZjm.png) no-repeat 0 -30px;right:-10px;bottom:-10px}.fb_dialog_vert_left,.fb_dialog_vert_right,.fb_dialog_horiz_top,.fb_dialog_horiz_bottom{position:absolute;background:#525252;filter:alpha(opacity=70);opacity:.7}.fb_dialog_vert_left,.fb_dialog_vert_right{width:10px;height:100%}.fb_dialog_vert_left{margin-left:-10px}.fb_dialog_vert_right{right:0;margin-right:-10px}.fb_dialog_horiz_top,.fb_dialog_horiz_bottom{width:100%;height:10px}.fb_dialog_horiz_top{margin-top:-10px}.fb_dialog_horiz_bottom{bottom:0;margin-bottom:-10px}.fb_dialog_iframe{line-height:0}.fb_dialog_content .dialog_title{background:#6d84b4;border:1px solid #365899;color:#fff;font-size:14px;font-weight:bold;margin:0}.fb_dialog_content .dialog_title>span{background:url(https://static.xx.fbcdn.net/rsrc.php/v3/yd/r/Cou7n-nqK52.gif) no-repeat 5px 50%;float:left;padding:5px 0 7px 26px}body.fb_hidden{-webkit-transform:none;height:100%;margin:0;overflow:visible;position:absolute;top:-10000px;left:0;width:100%}.fb_dialog.fb_dialog_mobile.loading{background:url(https://static.xx.fbcdn.net/rsrc.php/v3/ya/r/3rhSv5V8j3o.gif) white no-repeat 50% 50%;min-height:100%;min-width:100%;overflow:hidden;position:absolute;top:0;z-index:10001}.fb_dialog.fb_dialog_mobile.loading.centered{width:auto;height:auto;min-height:initial;min-width:initial;background:none}.fb_dialog.fb_dialog_mobile.loading.centered #fb_dialog_loader_spinner{width:100%}.fb_dialog.fb_dialog_mobile.loading.centered .fb_dialog_content{background:none}.loading.centered #fb_dialog_loader_close{color:#fff;display:block;padding-top:20px;clear:both;font-size:18px}#fb-root #fb_dialog_ipad_overlay{background:rgba(0, 0, 0, .45);position:absolute;bottom:0;left:0;right:0;top:0;width:100%;min-height:100%;z-index:10000}#fb-root #fb_dialog_ipad_overlay.hidden{display:none}.fb_dialog.fb_dialog_mobile.loading iframe{visibility:hidden}.fb_dialog_content .dialog_header{-webkit-box-shadow:white 0 1px 1px -1px inset;background:-webkit-gradient(linear, 0% 0%, 0% 100%, from(#738ABA), to(#2C4987));border-bottom:1px solid;border-color:#1d4088;color:#fff;font:14px Helvetica, sans-serif;font-weight:bold;text-overflow:ellipsis;text-shadow:rgba(0, 30, 84, .296875) 0 -1px 0;vertical-align:middle;white-space:nowrap}.fb_dialog_content .dialog_header table{-webkit-font-smoothing:subpixel-antialiased;height:43px;width:100%}.fb_dialog_content .dialog_header td.header_left{font-size:12px;padding-left:5px;vertical-align:middle;width:60px}.fb_dialog_content .dialog_header td.header_right{font-size:12px;padding-right:5px;vertical-align:middle;width:60px}.fb_dialog_content .touchable_button{background:-webkit-gradient(linear, 0% 0%, 0% 100%, from(#4966A6), color-stop(.5, #355492), to(#2A4887));border:1px solid #29487d;-webkit-background-clip:padding-box;-webkit-border-radius:3px;-webkit-box-shadow:rgba(0, 0, 0, .117188) 0 1px 1px inset, rgba(255, 255, 255, .167969) 0 1px 0;display:inline-block;margin-top:3px;max-width:85px;line-height:18px;padding:4px 12px;position:relative}.fb_dialog_content .dialog_header .touchable_button input{border:none;background:none;color:#fff;font:12px Helvetica, sans-serif;font-weight:bold;margin:2px -12px;padding:2px 6px 3px 6px;text-shadow:rgba(0, 30, 84, .296875) 0 -1px 0}.fb_dialog_content .dialog_header .header_center{color:#fff;font-size:16px;font-weight:bold;line-height:18px;text-align:center;vertical-align:middle}.fb_dialog_content .dialog_content{background:url(https://static.xx.fbcdn.net/rsrc.php/v3/y9/r/jKEcVPZFk-2.gif) no-repeat 50% 50%;border:1px solid #555;border-bottom:0;border-top:0;height:150px}.fb_dialog_content .dialog_footer{background:#f6f7f9;border:1px solid #555;border-top-color:#ccc;height:40px}#fb_dialog_loader_close{float:left}.fb_dialog.fb_dialog_mobile .fb_dialog_close_button{text-shadow:rgba(0, 30, 84, .296875) 0 -1px 0}.fb_dialog.fb_dialog_mobile .fb_dialog_close_icon{visibility:hidden}#fb_dialog_loader_spinner{animation:rotateSpinner 1.2s linear infinite;background-color:transparent;background-image:url(https://static.xx.fbcdn.net/rsrc.php/v3/yD/r/t-wz8gw1xG1.png);background-repeat:no-repeat;background-position:50% 50%;height:24px;width:24px}@keyframes rotateSpinner{0%{transform:rotate(0deg)}100%{transform:rotate(360deg)}}
-.fb_iframe_widget{display:inline-block;position:relative}.fb_iframe_widget span{display:inline-block;position:relative;text-align:justify}.fb_iframe_widget iframe{position:absolute}.fb_iframe_widget_fluid_desktop,.fb_iframe_widget_fluid_desktop span,.fb_iframe_widget_fluid_desktop iframe{max-width:100%}.fb_iframe_widget_fluid_desktop iframe{min-width:220px;position:relative}.fb_iframe_widget_lift{z-index:1}.fb_hide_iframes iframe{position:relative;left:-10000px}.fb_iframe_widget_loader{position:relative;display:inline-block}.fb_iframe_widget_fluid{display:inline}.fb_iframe_widget_fluid span{width:100%}.fb_iframe_widget_loader iframe{min-height:32px;z-index:2;zoom:1}.fb_iframe_widget_loader .FB_Loader{background:url(https://static.xx.fbcdn.net/rsrc.php/v3/y9/r/jKEcVPZFk-2.gif) no-repeat;height:32px;width:32px;margin-left:-16px;position:absolute;left:50%;z-index:4}</style></head>
+            <p class="font_8" style="line-height:1.3em;">&nbsp;</p>
+
+            <h6 class="font_6" style="line-height:1.3em;">
+                <span class="color_19">
+                    <span style="letter-spacing:0.05em;">Address:
+                    </span>
+                </span>
+            </h6>
+
+            <p class="font_8" style="line-height:1.3em;">
+                <span class="color_19">
+                    <span style="letter-spacing:0.05em;">E214,Shenzhen Graduate School of Peking University
+                    </span>
+                </span>
+            </p>
+
+            <p class="font_8" style="line-height:1.3em;">
+                <span class="color_19">
+                    <span style="letter-spacing:0.05em;">University Town, Xili, Nanshan District, Shenzhen P.R.C.
+                    </span>
+                </span>
+            </p>
+
+            <p class="font_8" style="line-height:1.3em;">
+                <span class="color_19">
+                    <span style="letter-spacing:0.05em;">
+                        <span class="wixGuard">​
+                        </span>
+                    </span>
+                </span>
+            </p>
+
+            <h6 class="font_6" style="line-height:1.3em;">
+                <span class="color_19">
+                    <span style="letter-spacing:0.05em;">Date of Birth:
+                    </span>
+                </span>
+            </h6>
+
+            <p class="font_8" style="line-height:1.3em;">
+                <span class="color_19">
+                    <span style="letter-spacing:0.05em;">March 30th, 1991
+                    </span>
+                </span>
+            </p>
+
+            <h6 class="font_6" style="line-height:1.3em;">
+                <span class="wixGuard">​
+                </span>
+            </h6>
+        </div>
+    </body>
+</html>
